# capstone

./: .gitignore  README.md
service_module/person_tracking/: README.md  bytetrack_custom.yaml  openni_frame_test.py  openni_test.py  openni_yolo_depth.py  openni_yolo_depth_angle.py  openni_yolo_live_gui.py  pyproject.toml  requirements.txt  yolo_test.py
service_module/person_tracking/astra_test/: astra_color.ppm  capture_color  capture_color.cpp  live_color  live_color.cpp
service_module/person_tracking/config/: config.yaml
service_module/person_tracking/src/person_tracking/: camera.py  can_sender.py  detector.py  display.py  main.py  measure.py  target_manager.py
service_module/person_tracking/yolov8n_ncnn_model/: metadata.yaml
