[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "person_tracking"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "opencv-python",
  "ultralytics",
  "ncnn",
  "lap",
  "PyYAML",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
